fix vertical alignment for the card

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ hr {
 .container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     justify-content: center;
     align-items: center;
